[gd_scene load_steps=2 format=3 uid="uid://c84hilvcwcvgs"]

[ext_resource type="Script" uid="uid://bmy6qwbn3kess" path="res://source/algorithm_menu.gd" id="1_hi5xi"]

[node name="AlgorithmMenu" type="Node2D"]
script = ExtResource("1_hi5xi")

[node name="ShuffleButton" type="Button" parent="."]
visible = false
offset_left = 126.0
offset_top = 87.0
offset_right = 189.0
offset_bottom = 118.0
disabled = true
text = "Shuffle
"

[node name="HBoxContainer" type="HFlowContainer" parent="."]
offset_left = 503.0
offset_top = 562.0
offset_right = 1080.0
offset_bottom = 604.0
alignment = 1

[node name="BubbleSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Bubble Sort"

[node name="QuickSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quick Sort
"

[node name="InsertionSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Insertion Sort"

[node name="MergeSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Merge Sort
"

[node name="SelectionSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Selection Sort"

[node name="BogoSortButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Bogo Sort"

[connection signal="pressed" from="ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BubbleSortButton" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="HBoxContainer/QuickSortButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/InsertionSortButton" to="." method="_on_inssort_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MergeSortButton" to="." method="_on_mergesort_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SelectionSortButton" to="." method="_on_selection_sort_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BogoSortButton" to="." method="_on_bogo_sort_button_pressed"]
